logs/bot_stderr_20251006_155935.log
  File "C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py", line 151
    return
    ^^^^^^
SyntaxError: 'return' outside function
